upgrade button fixed white and hotjar test

--- a/public/mobile-overrides.css
+++ b/public/mobile-overrides.css
@@ -263,8 +263,8 @@
 
 #upgradeBtn {
   background: white !important;
-  color: black !important;
-  border: none !important;
+  color: white !important;
+  border: white !important;
 }
 
 }
